--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <title>Foodgram</title>
 </head>
 <body>
-    <link rel="stylesheet" href="/public/main.css">
+    <link rel="stylesheet" href="/public/css/main.css">
     {{{body}}}
 </body>
 </html>
