--- a/views/postArecipe.handlebars
+++ b/views/postArecipe.handlebars
@@ -12,6 +12,8 @@
     <textarea placeholder="Enter the Preparation Directions Here" id="preppingDirections" name="preppingDirections" required></textarea><br>
     <label for="cookingDirections">Enter Cooking Recipe Directions:</label>
     <textarea placeholder="Enter the Cooking Directions Here" id="cookingDirections" name="cookingDirections" required></textarea><br>
+    <label for="ct">Enter Cusine Type:</label>
+    <input type="text" id="ct" required><br>
     <label>
         <select id="dietaryTags" name="dietaryTags">
             <option value="vegan">Vegan</option>
