--- a/views/users/userpage.handlebars
+++ b/views/users/userpage.handlebars
@@ -30,7 +30,7 @@
         <ul>
                 {{#each user.recipes}}
                     <li>
-                    <a href="/recipes/{{id}}">{{name}}</a>
+                    <a href="/recipe/post/{{_id}}">{{recipeName}}</a>
                     </li> 
                     {{else}}
                     <p class="not-found">We're sorry, but this user has not posted any recipes.</p>
