--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -3,6 +3,13 @@
     <h2>{{a.recipeName}}</h2>
     <p>{{a.recipePicture}}</p>
     <p id="m">{{a.recipeDescription}}</p>
+    <p>Likes: {{a.likes}}</p>
+    <form action='/recipe/like' method='POST'id='likeForm'>
+    <label for='like'>
+    <button type='submit'id='likeStatus' name='likeStatus' value='{{likedStatus}}'>{{likedStatus}}</button>
+    </label>
+    <input type="hidden" name="recipeId" id="recipeId" value="{{a._id}}">
+    </form>
     <h4>Comments:</h4>
     {{#each b}}
     <ul>
@@ -13,7 +20,7 @@
 </div>
 <div>
     <form id="comm" method="post" action="/recipe/comments">Comment On This Recipe
-    <input type="hidden" name="recipeId" id="recipeId" value="{{recipeId}}">
+    <input type="hidden" name="recipeId" id="recipeId" value="{{a._id}}">
     <br><br>
     <input type="text" placeholder="Enter Subject Line" id="subject" name="subject">
     <br><br>
@@ -29,3 +36,4 @@
     <p>{{error}}</p>
     {{/if}}
 </div>
+
