--- a/views/users/editUser.HandleBars
+++ b/views/users/editUser.HandleBars
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h2 class='error'>{{error}}</h2>
-    <form method="POST" action="users/{{user.id}}/edit">
+    <form method="POST" action="/edit">
     
         <label for="Profile Picture" >Profile Picture:</label><br>
         <input id="image" type="file" name="profilePicture" placeholder="Photo" required="" capture>
