--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -1,8 +1,15 @@
-<h2>Know more about this recipe</h2>
+<h1>Know more about this recipe</h1>
 <div>
+    <h2>Poster:<a href='/users/profile/{{a.posterId}}'> {{a.posterUsername}}</a></h2>
     <h2>{{a.recipeName}}</h2>
-    <p>{{a.recipePicture}}</p>
+    <img alt='{{a._id}} recipepicture'src='/public/images/{{a.recipePicture}}'/>
     <p id="m">{{a.recipeDescription}}</p>
+    <p>Ingredients: {{a.ingredients}}</p>
+    <br>
+    <p>Prepping Directions: {{a.preppingDirections}}</p>
+    <br>
+    <p>Cooking Directions: {{a.cookingDirections}}</p>
+    <br>
     <p>Likes: {{a.likes}}</p>
     <form action='/recipe/like' method='POST'id='likeForm'>
     <label for='like'>
