--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,9 +8,14 @@ body {
 }
 
 body {
-  background: #053a55;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	background: #e0bbe4;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+		'Open Sans', 'Helvetica Neue', sans-serif;
+}
+header {
+	text-align: center;
+	color: rgb(1 0 88);
+	border-bottom: 1px solid #000;
 }
 
 main {
