--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,10 @@
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html,
 body {
-  font-size: 10pt;
+	font-size: 10pt;
 }
 
 body {
@@ -12,103 +12,110 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
 		'Open Sans', 'Helvetica Neue', sans-serif;
 }
-header {
-	text-align: center;
-	color: rgb(1 0 88);
-	border-bottom: 1px solid #000;
-}
 
 main {
-  max-width: 100%;
-  margin: auto;
+	max-width: 100%;
+	margin: auto;
+}
+header {
+	text-align: center;
+	color: #fec8d8;
+	border-bottom: 1px solid #fec8d8;
 }
 
 ul {
-  list-style-type: circle;
-  color: white;
-  font-size: 1.2rem;
-  text-shadow: 0 0 4px;
+	list-style-type: circle;
+	color: white;
+	font-size: 1.2rem;
+	text-shadow: 0 0 4px;
 }
 
 h1 {
-  color: rgb(242, 242, 247);
-  margin-bottom: 5px;
-  text-align: center;
-  font-size: 5rem;
-  background-color: black;
-  text-shadow: 0 0 4px;
+	color: rgb(242, 242, 247);
+	margin-bottom: 5px;
+	text-align: center;
+	font-size: 5rem;
+	background-color: #fec8d8;
+	text-shadow: 0 0 4px;
 }
 
 h2 {
-  font-size: 1rem;
-  text-align: center;
-  color: white;
-  font-size: 3rem;
-  text-shadow: 0 0 4px;
+	font-size: 1rem;
+	text-align: center;
+	color: white;
+	font-size: 3rem;
+	text-shadow: 0 0 4px;
 }
 
 h2.b {
-  font-size: 1rem;
+	font-size: 1rem;
+	text-align: center;
 }
 
 p {
-  font-size: 1.25rem;
-  line-height: 2;
-  color: rgb(241, 241, 247);
-  text-align: center;
+	font-size: 1.25rem;
+	line-height: 2;
+	color: rgb(241, 241, 247);
+	text-align: center;
 }
 
 dl {
-  background: #000000;
-  color: #dedede;
-  display: block;
-  margin-top: 2em;
-  margin-bottom: 1em;
-  margin-left: 1em;
-  margin-right: 0;
+	background: #000000;
+	color: #dedede;
+	display: block;
+	margin-top: 2em;
+	margin-bottom: 1em;
+	margin-left: 1em;
+	margin-right: 0;
 }
 
 dd {
-  margin: 1px 0;
-  padding: 5px 0;
+	margin: 1px 0;
+	padding: 5px 0;
 }
 dt {
-  margin: 2px 0;
-  padding: 5px 0;
+	margin: 2px 0;
+	padding: 5px 0;
 }
 link {
-  color: white;
-  text-shadow: 0 0 4px;
+	color: rgb(202, 133, 211);
+	text-shadow: 0 0 4px;
+	text-align: center;
 }
 form {
-  left: 38%;
+	text-align: center;
 }
 a {
-  color: white;
-  text-shadow: 0 0 4px;
-  font-size: 1.5rem;
+	color: white;
+	text-shadow: 0 0 4px;
+	font-size: 1.5rem;
+	text-align: center;
+}
+a:hover {
+	color: hotpink;
 }
 
 label {
-  color: white;
-  text-shadow: 0 0 4px;
-  font-size: 1.5rem;
+	color: white;
+	text-shadow: 0 0 4px;
+	font-size: 1.5rem;
+	text-align: center;
 }
 
 #errorcheck {
-  color: white;
-  font-size: 1.3rem;
+	color: white;
+	font-size: 1.3rem;
 }
 
 #m {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial,
+		sans-serif;
 }
 
 #comm {
-  color: white;
+	color: white;
 }
 h4 {
-  text-align: center;
-  color: wheat;
+	text-align: center;
+	color: wheat;
 }
