--- a/views/loggedIn.handlebars
+++ b/views/loggedIn.handlebars
@@ -47,36 +47,28 @@
             <a href="/recipe/post/{{this._id}}">{{recipeName}}</a>
             
         </li>
-    </ul>
-    
+    </ul>   
     {{/each}}
     {{/if}}
     </div>
     <a href="/logout">Log Out</a>
 </div>
-
+<script src="/public/js/clientSideSearchArecipe.js"></script>
 <script>
         let likesButton = document.getElementById('sortLikesButton')
         let defaultButton = document.getElementById('defaultSortButton')
         let likeList = document.getElementById('likeSort')
         let defaultList = document.getElementById('defaultList')
-        
-
         likesButton.addEventListener('click',(event)=>{
             defaultList.hidden = true;
             likesButton.hidden = true;
             defaultButton.hidden = false;
             likeList.hidden = false;
-           
         });
         defaultButton.addEventListener('click',(event)=>{
             defaultList.hidden = false;
             likesButton.hidden = false;
             defaultButton.hidden = true;
             likeList.hidden = true;
-           
         })  
-
-
-
 </script>
