--- a/views/searchRecipe.handlebars
+++ b/views/searchRecipe.handlebars
@@ -10,7 +10,7 @@
     </form>
     <div id="errorcheck">
     {{#if error}}
-    <p>{{error}}</p>
+    <p id="errorcheck">{{error}}</p>
     {{/if}}
     <ul>
                 {{#each searchResults}}
