--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-	background: #e0bbe4;
+	background: white;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
 		'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -19,9 +19,10 @@ main {
 }
 header {
 	text-align: center;
-	color: #fec8d8;
-	border-bottom: 1px solid #fec8d8;
+	color: #df6648;
+	border-bottom: 1px solid #c94d72;
 }
+
 ul {
 	list-style-type: circle;
 	color: rgb(130, 186, 196);
@@ -34,14 +35,14 @@ h1 {
 	margin-bottom: 5px;
 	text-align: center;
 	font-size: 5rem;
-	background-color: #fec8d8;
+	background-color: #e9bb59;
 	text-shadow: 0 0 4px;
 }
 
 h2 {
 	font-size: 1rem;
 	text-align: center;
-	color: white;
+	color: rgb(20, 18, 18);
 	font-size: 3rem;
 	text-shadow: 0 0 4px;
 }
@@ -54,7 +55,7 @@ h2.b {
 p {
 	font-size: 1.25rem;
 	line-height: 2;
-	color: rgb(241, 241, 247);
+	color: rgb(11, 11, 14);
 	text-align: center;
 }
 
@@ -85,15 +86,18 @@ form {
 	text-align: center;
 }
 a {
-	color: white;
+	color: rgb(163, 79, 79);
 	text-shadow: 0 0 4px;
 	font-size: 1.5rem;
-	text-align: center;
 }
 a:hover {
 	color: hotpink;
 }
-
+a:link,
+a:visited {
+	text-decoration: underline;
+	display: inline-block;
+}
 label {
 	color: white;
 	text-shadow: 0 0 4px;
@@ -110,7 +114,28 @@ label {
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial,
 		sans-serif;
 }
-
+#submit {
+	font-size: 14px;
+	font-family: monospace;
+	padding: 12px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	border-radius: 5px;
+	cursor: pointer;
+	color: white;
+	background-color: rgb(40 97 182);
+	border: 1px solid rgb(150, 150, 150);
+	box-shadow: 1px 1px 5px -2px black;
+	transition-property: all;
+	transition-duration: 300ms;
+}
+#submit:hover {
+	border: 1px solid rgb(40 97 182);
+	color: rgb(40 97 182);
+	background-color: white;
+	box-shadow: 1px 1px 5px -2px black;
+	padding-right: 20px;
+}
 #comm {
 	color: white;
 }
