--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -36,7 +36,7 @@
     <button type="submit" value="Submit">Submit</button>
     </form>
     <br><br>
-    <a href="/loggedIn">Back to Feed</a>
+    <center><a href="/loggedIn">Back to Feed</a></center>
     <script src="/public/js/clientSidePostAcomment.js"></script>
 </div>
 <div id="errorcheck">
