--- a/views/searchRecipe.handlebars
+++ b/views/searchRecipe.handlebars
@@ -23,6 +23,6 @@
                 {{/each}}     
         </ul>
     </div>
-    <a href="/loggedIn">Back To Feed</a>
+   <center> <a href="/loggedIn">Back To Feed</a></center>
     <script src="/public/js/clientSidepostArecipe.js"></script>
 </div>
