--- a/views/sortByCuisines.handlebars
+++ b/views/sortByCuisines.handlebars
@@ -3,12 +3,12 @@
     <label for="cuisines">Sort by Cuisine</label>
     <br><br>
     <select id="cuisines" name="cuisines">
-        <option value="italian" name="italian">Italian</option>
-        <option value="mexican" name="mexican">Mexican</option>
-        <option value="indian" name="indian">Indian</option>
-        <option value="american" name="american">American</option>
-        <option value="lebanese" name="lebanese">Lebanese</option>
-        <option value="other" name="other">Other</option>
+        <option value="italian" >Italian</option>
+        <option value="mexican">Mexican</option>
+        <option value="indian" >Indian</option>
+        <option value="american" >American</option>
+        <option value="lebanese">Lebanese</option>
+        <option value="other">Other</option>
     </select>
     <label>
         <input type="submit" value="Submit Option">
