--- a/views/users/myPage.handlebars
+++ b/views/users/myPage.handlebars
@@ -1,25 +1,9 @@
-<head>
-	<header>
-		
-		<title>{{user.username}} Profile Page</title>
-	</header>
-    
-    <meta charset="UTF-8">
-    
-   <link rel='stylesheet' href='public/css/style.css'/>
-    
+    <link rel='stylesheet' href='public/css/style.css'/>
     <button id='likesButton' >Likes</button>
     <button id='profileButton' hidden>Profile</button>
-    
-</head>
-<body>
-    <h2 class='error'>{{error}}</h2>
     <div id="profile">
-        
-        <label for="edit" class=>Edit:</label><br>
+        <label for="edit">Edit:</label><br>
         <button id="edit" name="edit">Edit Profile</button>
-        
-        
         <h1>{{user.username}}</h1>
         <br>
         <br>
@@ -65,9 +49,7 @@
         </ul>
     </div>
     <div id='editPage' hidden>
-        <h2 class='error'>{{error}}</h2>
         <form method="POST" action="{{user._id}}/edit">
-    
         <label for="profilePicture" >Profile Picture:</label>
         <input type="file" id="profilePicture" name="profilePicture" accept="image/png, image/jpeg, image/jpg"><br>
         <br>
@@ -82,13 +64,11 @@
         <br>
         <input type="submit" value="Submit" />
         </form>
-   
         <input type="submit" id='cancel' name='cancel' value="Cancel" />
         
     </div>
     <a href="/loggedIn">Back to Feed</a>
-</body>
-
+{{!-- <script src="/public/js/ClientSideUpdateProfile.js"></script> --}}
 <script>
         let profileButton = document.getElementById('profileButton')
         let likesButton = document.getElementById('likesButton')
@@ -120,13 +100,11 @@
             editProfile.hidden = false;
             
         })          
-       cancelButton.addEventListener('click',(event)=>{
+        cancelButton.addEventListener('click',(event)=>{
             profile.hidden = false;
             likesButton.hidden = false;
             profileButton.hidden = true;
             likes.hidden = true;
             editProfile.hidden = true;
         })
-        
-        
-    </script>
+</script>
