--- a/views/users/myPage.handlebars
+++ b/views/users/myPage.handlebars
@@ -66,10 +66,10 @@
     </div>
     <div id='editPage' hidden>
         <h2 class='error'>{{error}}</h2>
-        <form method="POST" action="{{user._id}}/edit">
+        <form method="POST" action="{{user._id}}/edit" enctype="multipart/form-data">
     
         <label for="profilePicture" >Profile Picture:</label>
-        <input type="file" id="profilePicture" name="profilePicture" accept="image/png, image/jpeg, image/jpg"><br>
+        <input type="file" id="profilePicture" name="profilePicture" ><br>
         <br>
         <br>
         <label for="bio" >Bio:</label>
