--- a/views/users/myPage.handlebars
+++ b/views/users/myPage.handlebars
@@ -54,7 +54,7 @@
         <form method="POST" action="{{user._id}}/edit" enctype="multipart/form-data">
     
         <label for="profilePicture" >Profile Picture:</label>
-        <input type="file" id="profilePicture" name="profilePicture" ><br>
+        <input type="file" id="profilePicture" name="profilePicture" accept='image/png, image/jpg, image/jpeg'><br>
         <br>
         <br>
         <label for="bio" >Bio:</label>
