Updated PostARecipe Form

--- a/views/postArecipe.handlebars
+++ b/views/postArecipe.handlebars
@@ -1,5 +1,5 @@
 <h2>Cooked something new? Share with our users.</h2>
-<form action="/recipe/postArecipe" method="POST" id="post-a-recipe-form">
+<form action="/recipe/postArecipe" method="POST" id="post-a-recipe-form" enctype="multipart/form-data">
     <label for="recipeName">Enter a Recipe Name:</label>
     <input type="text" placeholder="Enter the Recipe Name Here" id="recipeName" name="recipeName" required> 
     <br><br>
