--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -2,7 +2,7 @@
 <div>
     <h2>Poster:<a href='/users/profile/{{a.posterId}}'> {{a.posterUsername}}</a></h2>
     <h2>{{a.recipeName}}</h2>
-    <img alt='{{a._id}} recipepicture' src='/public/images/{{a.recipePicture}}'/>
+    <img class='photo' alt='{{a._id}} recipepicture' src='/public/images/{{a.recipePicture}}'/>
     <p id="m">{{a.recipeDescription}}</p>
     <p>Ingredients: {{a.ingredients}}</p>
     <br>
