--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,6 +47,53 @@ h2 {
   text-shadow: 0 0 4px;
 }
 
+.recipeDisplay{
+  width:100%;
+ 
+  text-align:center
+}
+.recipeList{
+  
+    display:inline-block;
+    border:5px solid #000;
+    padding:20px;
+    margin-right:10px;
+    background-color:powderblue;
+}
+.recipeContent{
+  
+    border:2px solid #000;
+    padding:20px;
+    margin-right:10px;
+    background-color: cornsilk;
+}
+.recipeListImage{
+  float: left;
+  width:  300px;
+  height: 200px;
+  
+  object-fit: cover;
+
+}
+
+.photo{
+  
+  width:  400px;
+  height: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+  object-fit: cover;
+ 
+}
+
+.table{
+  display: table;   
+	margin: 0 auto;
+
+}
+
 h2.b {
   font-size: 1rem;
   text-align: center;
