--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -19,9 +19,9 @@
     </form>
     <h4>Comments:</h4>
     {{#each b}}
-    <ul>
-        <li><h4>Subject : {{subject}}</h4>
-        <h5>Description : {{description}}</h5>></li>
+    <ul class='commentList'>
+        <li class='comment'><h4>Subject : {{subject}}</h4>
+        <h5>Description : {{description}}</h5></li>
     </ul>
     {{/each}}
 </div>
