--- a/views/searchRecipe.handlebars
+++ b/views/searchRecipe.handlebars
@@ -10,7 +10,7 @@
     </form>
     <div id="errorcheck">
     {{#if error}}
-    <p id="errorcheck">{{error}}</p>
+    <p>{{error}}</p>
     {{/if}}
     <ul>
                 {{#each searchResults}}
@@ -23,6 +23,6 @@
                 {{/each}}     
         </ul>
     </div>
-   <center> <a href="/loggedIn">Back To Feed</a></center>
+    <center> <a href="/loggedIn">Back To Feed</a></center>
     <script src="/public/js/clientSidepostArecipe.js"></script>
 </div>
