Made Changes to match TOTA11Y

--- a/views/postArecipe.handlebars
+++ b/views/postArecipe.handlebars
@@ -1,4 +1,4 @@
-<h2>Cooked something new? Share with our users.</h2>
+<h1>Cooked something new? Share with our users.</h1>
 <form action="/recipe/postArecipe" method="POST" id="post-a-recipe-form" enctype="multipart/form-data">
     <label for="recipeName">Enter a Recipe Name:</label>
     <input type="text" placeholder="Enter the Recipe Name Here" id="recipeName" name="recipeName" > 
@@ -18,7 +18,7 @@
     <label for="cookingDirections">Enter Cooking Recipe:</label>
     <textarea placeholder="Enter the Cooking Directions Here" id="cookingDirections" name="cookingDirections" ></textarea>
     <br><br>
-    <label>
+    <label>Enter Cuisine Type: 
         <select id="cuisineType" name="cuisineType">
             <option value="italian">Italian</option>
             <option value="mexican">Mexican</option>
@@ -29,7 +29,7 @@
         </select>
     </label>
     <br><br>
-    <label>
+    <label>Enter Dietary Type: 
         <select id="dietaryTags" name="dietaryTags">
             <option value="vegan">Vegan</option>
             <option value="vegetarian">Vegetarian</option>
