--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,7 +35,7 @@ h1 {
   margin-bottom: 5px;
   text-align: center;
   font-size: 5rem;
-  background-color: #e9bb59;
+  background-color: #c37d00;
   text-shadow: 0 0 4px;
 }
 
@@ -47,66 +47,59 @@ h2 {
   text-shadow: 0 0 4px;
 }
 
-.recipeDisplay{
-  width:100%;
- 
-  text-align:center
+.recipeDisplay {
+  width: 100%;
+
+  text-align: center;
 }
-.recipeList{
-  
-    display:inline-block;
-    border:5px solid #000;
-    padding:20px;
-    margin-right:10px;
-    background-color:powderblue;
+.recipeList {
+  display: inline-block;
+  border: 5px solid #000;
+  padding: 20px;
+  margin-right: 10px;
+  background-color: powderblue;
 }
-.recipeContent{
-  
-    border:2px solid #000;
-    padding:20px;
-    margin-right:10px;
-    background-color: cornsilk;
+.recipeContent {
+  border: 2px solid #000;
+  padding: 20px;
+  margin-right: 10px;
+  background-color: cornsilk;
 }
-.recipeListImage{
+.recipeListImage {
   float: left;
-  width:  300px;
+  width: 300px;
   height: 200px;
-  
+
   object-fit: cover;
-
 }
-.commentList{
+.commentList {
+  display: table;
+  margin: 0 auto;
+  border: 5px solid #000;
+  padding: 20px;
 
-    display: table;
-    margin: 0 auto;
-    border:5px solid #000;
-    padding:20px;
-   
-    background-color:powderblue;
-    text-align:center
+  background-color: powderblue;
+  text-align: center;
 }
-.comment{
-  border:2px solid #000;
-  padding:20px;
-  
+.comment {
+  border: 2px solid #000;
+  padding: 20px;
+
   background-color: maroon;
 }
-.photo{
-  
-  width:  400px;
+.photo {
+  width: 400px;
   height: 300px;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  
+
   object-fit: cover;
- 
 }
 
-.table{
-  display: table;   
-	margin: 0 auto;
-
+.table {
+  display: table;
+  margin: 0 auto;
 }
 
 h2.b {
@@ -146,6 +139,9 @@ link {
 }
 form {
   text-align: center;
+  font-size: 1.3rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 a {
   color: rgb(163, 79, 79);
@@ -203,4 +199,9 @@ label {
 h4 {
   text-align: center;
   color: wheat;
+}
+
+h3 {
+  text-align: center;
+  color: #917300;
 }
