--- a/views/searchRecipe.handlebars
+++ b/views/searchRecipe.handlebars
@@ -19,10 +19,10 @@
                             <a  href="/recipe/post/{{_id}}"><img class='recipeListImage' alt='{{_id}} picture' src='/public/images/{{recipePicture}}'/></a><br>
                             <div class="recipeContent">
                             <a href="/recipe/post/{{_id}}">{{recipeName}}</a>
-                            <p>Created By {{posterUsername}}</p>
+                            <p>Created By <a href='/users/profile/{{posterId}}'>{{posterUsername}}</a></p>
                             </div>
                         </li>
-                     </ul> 
+                    </ul> 
                      {{else}}
                     <h2 class="not-found">No Results Found</h2>
                     <p>try searching using complete words like "chicken" or "curry"</p>
