--- a/views/users/myPage.handlebars
+++ b/views/users/myPage.handlebars
@@ -27,7 +27,7 @@
                     <a  href="/recipe/post/{{_id}}"><img class='recipeListImage' alt='{{_id}} picture' src='/public/images/{{recipePicture}}'/></a><br>
                     <div class="recipeContent">
                     <a href="/recipe/post/{{_id}}">{{recipeName}}</a>
-                    <p>Created By {{posterUsername}}</p>
+                    <p>Created By <a href='/users/profile/{{posterId}}'>{{posterUsername}}</a></p>
                     </div>
                     </li>
                     {{else}}
@@ -54,7 +54,7 @@
                     <a  href="/recipe/post/{{_id}}"><img class='recipeListImage' alt='{{_id}} picture' src='/public/images/{{recipePicture}}'/></a><br>
                     <div class="recipeContent">
                     <a href="/recipe/post/{{_id}}">{{recipeName}}</a>
-                    <p>Created By {{posterUsername}}</p>
+                    <p>Created By <a href='/users/profile/{{posterId}}'>{{posterUsername}}</a></p>
                     </div>
                     </li>
                 
@@ -106,7 +106,7 @@
                     <a  href="/recipe/post/{{_id}}"><img class='recipeListImage' alt='{{_id}} picture' src='/public/images/{{recipePicture}}'/></a><br>
                     <div class="recipeContent">
                     <a href="/recipe/post/{{_id}}">{{recipeName}}</a>
-                    <p>Created By {{posterUsername}}</p>
+                    <p>Created By <a href='/users/profile/{{posterId}}'>{{posterUsername}}</a></p>
                     </div>
                     </li>
                     {{else}}
