--- a/views/users/userpage.handlebars
+++ b/views/users/userpage.handlebars
@@ -26,7 +26,7 @@
                     <a  href="/recipe/post/{{_id}}"><img class='recipeListImage' alt='{{_id}} picture' src='/public/images/{{recipePicture}}'/></a><br>
                     <div class="recipeContent">
                     <a href="/recipe/post/{{_id}}">{{recipeName}}</a>
-                    <p>Created By {{posterUsername}}</p>
+                    <p>Created By <a href='/users/profile/{{posterId}}'>{{posterUsername}}</a></p>
                     </div>
                     </li>
                     {{else}}
@@ -53,7 +53,7 @@
                     <a  href="/recipe/post/{{_id}}"><img class='recipeListImage' alt='{{_id}} picture' src='/public/images/{{recipePicture}}'/></a><br>
                     <div class="recipeContent">
                     <a href="/recipe/post/{{_id}}">{{recipeName}}</a>
-                    <p>Created By {{posterUsername}}</p>
+                    <p>Created By <a href='/users/profile/{{posterId}}'>{{posterUsername}}</a></p>
                     </div>
                     </li>
                     {{else}}
