Validated all HTML

--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -4,6 +4,6 @@
     <h1>Welcome to FOODGRAM</h1>
     <p>Hello foodie. We are delighted to welcome you to a world of food.</p>
     <br><br>
-   <center> <button type="button" onclick= "window.location.href='signup'" name="signup" id="signup">Sign-Up</button></center>
-   <center> <button type="button" onclick= "window.location.href='login'" name="login" id="login">Login</button></center>
+    <button type="button" onclick= "window.location.href='signup'" name="signup" id="signup">Sign-Up</button>
+    <button type="button" onclick= "window.location.href='login'" name="login" id="login">Login</button>
 </div>
