--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -30,11 +30,11 @@
     <form id="formForComment" method="post" action="/recipe/comments">Comment On This Recipe
     <input type="hidden" name="recipeId" id="recipeid" value="{{a._id}}">
     <br><br>
-    <label for="subjectLine">Enter Comment Subject Here
+    <label for="subject">Enter Comment Subject Here
     <input type="text" placeholder="Enter Subject Line" id="subject" name="subject">
     </label>
     <br><br>
-    <label for="descriptionComment"> Enter Comment Description Here
+    <label for="description" > Enter Comment Description Here
     <textarea id="description" placeholder="Enter Description" name="description"></textarea>
     </label>
     <br><br>
