--- a/views/users/myPage.handlebars
+++ b/views/users/myPage.handlebars
@@ -65,7 +65,6 @@
         </div>
     </div>
     <div id='editPage' hidden>
-        <h2 class='error'>{{error}}</h2>
         <form method="POST" action="{{user._id}}/edit" id="formForEditUser" enctype="multipart/form-data">
         <label for="profilePicture" >Profile Picture:</label>
         <input type="file" id="profilePicture" name="profilePicture" accept='image/png, image/jpg, image/jpeg'><br>
@@ -79,14 +78,14 @@
         <input type="text" id="favoriteRecipe" name="favoriteRecipe" placeholder="What is your favorite recipe...">
         <br>
         <br>
-        <input type="submit" value="Submit" />
+        <input type="submit" value="Submit" >
         </form>
-        <input type="submit" id='cancel' name='cancel' value="Cancel" />
-    </div>
-    <div id="errorcheck">
-        {{#if error}}
-        <p>{{error}}</p>
-        {{/if}}
+        <div id="errorcheck">
+            {{#if error}}
+            <p>{{error}}</p>
+            {{/if}}
+        </div>
+        <input type="submit" id='cancel' name='cancel' value="Cancel" >
     </div>
     <div id='recents' hidden>
         <h1>{{user.username}}</h1>
